[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tile.png" type="Texture" id=2]
[ext_resource path="res://Assets/Arrow.png" type="Texture" id=3]
[ext_resource path="res://Assets/ArrowCircle.png" type="Texture" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Board" type="GridContainer" parent="."]
margin_left = 76.0
margin_top = 50.0
margin_right = 324.0
margin_bottom = 334.0
columns = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Col1Button" type="TextureButton" parent="Board"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Col2Button" type="TextureButton" parent="Board"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Col3Button" type="TextureButton" parent="Board"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Col4Button" type="TextureButton" parent="Board"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Col5Button" type="TextureButton" parent="Board"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Col6Button" type="TextureButton" parent="Board"]
margin_left = 180.0
margin_right = 212.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Col7Button" type="TextureButton" parent="Board"]
margin_left = 216.0
margin_right = 248.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="00" type="TextureRect" parent="Board"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/00"]
position = Vector2( 16, 16 )

[node name="10" type="TextureRect" parent="Board"]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/10"]
position = Vector2( 16, 16 )

[node name="20" type="TextureRect" parent="Board"]
margin_left = 72.0
margin_top = 36.0
margin_right = 104.0
margin_bottom = 68.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/20"]
position = Vector2( 16, 16 )

[node name="30" type="TextureRect" parent="Board"]
margin_left = 108.0
margin_top = 36.0
margin_right = 140.0
margin_bottom = 68.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/30"]
position = Vector2( 16, 16 )

[node name="40" type="TextureRect" parent="Board"]
margin_left = 144.0
margin_top = 36.0
margin_right = 176.0
margin_bottom = 68.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/40"]
position = Vector2( 16, 16 )

[node name="50" type="TextureRect" parent="Board"]
margin_left = 180.0
margin_top = 36.0
margin_right = 212.0
margin_bottom = 68.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/50"]
position = Vector2( 16, 16 )

[node name="60" type="TextureRect" parent="Board"]
margin_left = 216.0
margin_top = 36.0
margin_right = 248.0
margin_bottom = 68.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/60"]
position = Vector2( 16, 16 )

[node name="01" type="TextureRect" parent="Board"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/01"]
position = Vector2( 16, 16 )

[node name="11" type="TextureRect" parent="Board"]
margin_left = 36.0
margin_top = 72.0
margin_right = 68.0
margin_bottom = 104.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/11"]
position = Vector2( 16, 16 )

[node name="21" type="TextureRect" parent="Board"]
margin_left = 72.0
margin_top = 72.0
margin_right = 104.0
margin_bottom = 104.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/21"]
position = Vector2( 16, 16 )

[node name="31" type="TextureRect" parent="Board"]
margin_left = 108.0
margin_top = 72.0
margin_right = 140.0
margin_bottom = 104.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/31"]
position = Vector2( 16, 16 )

[node name="41" type="TextureRect" parent="Board"]
margin_left = 144.0
margin_top = 72.0
margin_right = 176.0
margin_bottom = 104.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/41"]
position = Vector2( 16, 16 )

[node name="51" type="TextureRect" parent="Board"]
margin_left = 180.0
margin_top = 72.0
margin_right = 212.0
margin_bottom = 104.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/51"]
position = Vector2( 16, 16 )

[node name="61" type="TextureRect" parent="Board"]
margin_left = 216.0
margin_top = 72.0
margin_right = 248.0
margin_bottom = 104.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/61"]
position = Vector2( 16, 16 )

[node name="02" type="TextureRect" parent="Board"]
margin_top = 108.0
margin_right = 32.0
margin_bottom = 140.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/02"]
position = Vector2( 16, 16 )

[node name="12" type="TextureRect" parent="Board"]
margin_left = 36.0
margin_top = 108.0
margin_right = 68.0
margin_bottom = 140.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/12"]
position = Vector2( 16, 16 )

[node name="22" type="TextureRect" parent="Board"]
margin_left = 72.0
margin_top = 108.0
margin_right = 104.0
margin_bottom = 140.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/22"]
position = Vector2( 16, 16 )

[node name="32" type="TextureRect" parent="Board"]
margin_left = 108.0
margin_top = 108.0
margin_right = 140.0
margin_bottom = 140.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/32"]
position = Vector2( 16, 16 )

[node name="42" type="TextureRect" parent="Board"]
margin_left = 144.0
margin_top = 108.0
margin_right = 176.0
margin_bottom = 140.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/42"]
position = Vector2( 16, 16 )

[node name="52" type="TextureRect" parent="Board"]
margin_left = 180.0
margin_top = 108.0
margin_right = 212.0
margin_bottom = 140.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/52"]
position = Vector2( 16, 16 )

[node name="62" type="TextureRect" parent="Board"]
margin_left = 216.0
margin_top = 108.0
margin_right = 248.0
margin_bottom = 140.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/62"]
position = Vector2( 16, 16 )

[node name="03" type="TextureRect" parent="Board"]
margin_top = 144.0
margin_right = 32.0
margin_bottom = 176.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/03"]
position = Vector2( 16, 16 )

[node name="13" type="TextureRect" parent="Board"]
margin_left = 36.0
margin_top = 144.0
margin_right = 68.0
margin_bottom = 176.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/13"]
position = Vector2( 16, 16 )

[node name="23" type="TextureRect" parent="Board"]
margin_left = 72.0
margin_top = 144.0
margin_right = 104.0
margin_bottom = 176.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/23"]
position = Vector2( 16, 16 )

[node name="33" type="TextureRect" parent="Board"]
margin_left = 108.0
margin_top = 144.0
margin_right = 140.0
margin_bottom = 176.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/33"]
position = Vector2( 16, 16 )

[node name="43" type="TextureRect" parent="Board"]
margin_left = 144.0
margin_top = 144.0
margin_right = 176.0
margin_bottom = 176.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/43"]
position = Vector2( 16, 16 )

[node name="53" type="TextureRect" parent="Board"]
margin_left = 180.0
margin_top = 144.0
margin_right = 212.0
margin_bottom = 176.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/53"]
position = Vector2( 16, 16 )

[node name="63" type="TextureRect" parent="Board"]
margin_left = 216.0
margin_top = 144.0
margin_right = 248.0
margin_bottom = 176.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/63"]
position = Vector2( 16, 16 )

[node name="04" type="TextureRect" parent="Board"]
margin_top = 180.0
margin_right = 32.0
margin_bottom = 212.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/04"]
position = Vector2( 16, 16 )

[node name="14" type="TextureRect" parent="Board"]
margin_left = 36.0
margin_top = 180.0
margin_right = 68.0
margin_bottom = 212.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/14"]
position = Vector2( 16, 16 )

[node name="24" type="TextureRect" parent="Board"]
margin_left = 72.0
margin_top = 180.0
margin_right = 104.0
margin_bottom = 212.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/24"]
position = Vector2( 16, 16 )

[node name="34" type="TextureRect" parent="Board"]
margin_left = 108.0
margin_top = 180.0
margin_right = 140.0
margin_bottom = 212.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/34"]
position = Vector2( 16, 16 )

[node name="44" type="TextureRect" parent="Board"]
margin_left = 144.0
margin_top = 180.0
margin_right = 176.0
margin_bottom = 212.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/44"]
position = Vector2( 16, 16 )

[node name="54" type="TextureRect" parent="Board"]
margin_left = 180.0
margin_top = 180.0
margin_right = 212.0
margin_bottom = 212.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/54"]
position = Vector2( 16, 16 )

[node name="64" type="TextureRect" parent="Board"]
margin_left = 216.0
margin_top = 180.0
margin_right = 248.0
margin_bottom = 212.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/64"]
position = Vector2( 16, 16 )

[node name="05" type="TextureRect" parent="Board"]
margin_top = 216.0
margin_right = 32.0
margin_bottom = 248.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/05"]
position = Vector2( 16, 16 )

[node name="15" type="TextureRect" parent="Board"]
margin_left = 36.0
margin_top = 216.0
margin_right = 68.0
margin_bottom = 248.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/15"]
position = Vector2( 16, 16 )

[node name="25" type="TextureRect" parent="Board"]
margin_left = 72.0
margin_top = 216.0
margin_right = 104.0
margin_bottom = 248.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/25"]
position = Vector2( 16, 16 )

[node name="35" type="TextureRect" parent="Board"]
margin_left = 108.0
margin_top = 216.0
margin_right = 140.0
margin_bottom = 248.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/35"]
position = Vector2( 16, 16 )

[node name="45" type="TextureRect" parent="Board"]
margin_left = 144.0
margin_top = 216.0
margin_right = 176.0
margin_bottom = 248.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/45"]
position = Vector2( 16, 16 )

[node name="55" type="TextureRect" parent="Board"]
margin_left = 180.0
margin_top = 216.0
margin_right = 212.0
margin_bottom = 248.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/55"]
position = Vector2( 16, 16 )

[node name="65" type="TextureRect" parent="Board"]
margin_left = 216.0
margin_top = 216.0
margin_right = 248.0
margin_bottom = 248.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/65"]
position = Vector2( 16, 16 )

[node name="06" type="TextureRect" parent="Board"]
margin_top = 252.0
margin_right = 32.0
margin_bottom = 284.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/06"]
position = Vector2( 16, 16 )

[node name="16" type="TextureRect" parent="Board"]
margin_left = 36.0
margin_top = 252.0
margin_right = 68.0
margin_bottom = 284.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/16"]
position = Vector2( 16, 16 )

[node name="26" type="TextureRect" parent="Board"]
margin_left = 72.0
margin_top = 252.0
margin_right = 104.0
margin_bottom = 284.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/26"]
position = Vector2( 16, 16 )

[node name="36" type="TextureRect" parent="Board"]
margin_left = 108.0
margin_top = 252.0
margin_right = 140.0
margin_bottom = 284.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/36"]
position = Vector2( 16, 16 )

[node name="46" type="TextureRect" parent="Board"]
margin_left = 144.0
margin_top = 252.0
margin_right = 176.0
margin_bottom = 284.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/46"]
position = Vector2( 16, 16 )

[node name="56" type="TextureRect" parent="Board"]
margin_left = 180.0
margin_top = 252.0
margin_right = 212.0
margin_bottom = 284.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/56"]
position = Vector2( 16, 16 )

[node name="66" type="TextureRect" parent="Board"]
margin_left = 216.0
margin_top = 252.0
margin_right = 248.0
margin_bottom = 284.0
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Board/66"]
position = Vector2( 16, 16 )

[node name="TopText" type="Label" parent="."]
margin_left = 172.0
margin_top = 30.0
margin_right = 238.0
margin_bottom = 44.0
text = "Red Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToMenuButton" type="Button" parent="."]
visible = false
margin_left = 150.5
margin_top = 360.0
margin_right = 251.5
margin_bottom = 380.0
text = "Back To Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Board/Col1Button" to="." method="_on_Col1Button_pressed"]
[connection signal="pressed" from="Board/Col2Button" to="." method="_on_Col2Button_pressed"]
[connection signal="pressed" from="Board/Col3Button" to="." method="_on_Col3Button_pressed"]
[connection signal="pressed" from="Board/Col4Button" to="." method="_on_Col4Button_pressed"]
[connection signal="pressed" from="Board/Col5Button" to="." method="_on_Col5Button_pressed"]
[connection signal="pressed" from="Board/Col6Button" to="." method="_on_Col6Button_pressed"]
[connection signal="pressed" from="Board/Col7Button" to="." method="_on_Col7Button_pressed"]
[connection signal="pressed" from="BackToMenuButton" to="." method="_on_BackToMenuButton_pressed"]
